# hyperpublic-haskell

./: Examples.hs  README.md  hyperpublic.cabal
Web/: Hyperpublic.hs
Web/Hyperpublic/: Categories.hs  Internal.hs  Offers.hs  Places.hs
